@@ -1,3 +1,10 @@
+Tue Jun 14 19:08:03 UTC 2011  Akshay V. Dabholkar  <aky@dre.vanderbilt.edu>
+
+        * orbsvcs/DevGuideExamples/EventServices/RTEC_Basic/EchoEventConsumerMain.cpp:
+        * orbsvcs/DevGuideExamples/EventServices/RTEC_Basic/EchoEventSupplierMain.cpp:
+
+        Restructured the code a little bit.
+
 Tue Jun 14 13:12:05 UTC 2011  Jeff Parsons <j.parsons@vanderbilt.edu>
 
         * TAO_IDL/be/be_valuetype.cpp:
@@ -5,7 +12,7 @@ Tue Jun 14 13:12:05 UTC 2011  Jeff Parsons <j.parsons@vanderbilt.edu>
         * TAO_IDL/be/be_visitor_amh_pre_proc.cpp:
         * TAO_IDL/be/be_visitor_valuetype/valuetype_ci.cpp:
 
-          Added code generation for AMH exception holder's default 
+          Added code generation for AMH exception holder's default
           constructor to initialize the CORBA::Exception* member
           to 0. This fix closes [BUGID:3970].
 
